[Refactor] #31 단일 쿼리로 품종을 조회한 뒤 Map 으로 그룹핑하여 반환