@@ -8,6 +8,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 import static com.kuit.findyou.domain.breed.model.Species.*;
 
@@ -19,22 +21,20 @@ public class BreedQueryServiceImpl implements BreedQueryService {
 
     @Override
     public BreedListResponseDTO getBreedList() {
-        List<String> dogBreedList = breedRepository.findBreedsBySpecies(DOG.getValue())
-                .stream()
-                .map(Breed::getName)
-                .toList();
+        List<Breed> breeds = breedRepository.findAll(); // 단일 쿼리
 
-        List<String> catBreedList = breedRepository.findBreedsBySpecies(CAT.getValue())
-                .stream()
-                .map(Breed::getName)
-                .toList();
+        // species 별로 Map<String, List<String>> 으로 그룹핑
+        Map<String, List<String>> grouped = breeds.stream()
+                .collect(Collectors.groupingBy(
+                        Breed::getSpecies,
+                        Collectors.mapping(Breed::getName, Collectors.toList())
+                ));
 
-        List<String> etcBreedList = breedRepository.findBreedsBySpecies(ETC.getValue())
-                .stream()
-                .map(Breed::getName)
-                .toList();
+        List<String> dogBreeds = grouped.getOrDefault(DOG.getValue(), List.of());
+        List<String> catBreeds = grouped.getOrDefault(CAT.getValue(), List.of());
+        List<String> etcBreeds = grouped.getOrDefault(ETC.getValue(), List.of());
 
-
-        return new BreedListResponseDTO(dogBreedList, catBreedList, etcBreedList);
+        return new BreedListResponseDTO(dogBreeds, catBreeds, etcBreeds);
     }
+
 }
